--- a/admin/index.html
+++ b/admin/index.html
@@ -17,6 +17,7 @@
 
     <!-- Google font -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
 
     <!-- Fort awesome icon kit -->
     <script src="https://use.fortawesome.com/b6f38602.js"></script>
